<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="nmedia" translatable="false">NMedia!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="_500" translatable="false">500</string>
    <string name="_5" translatable="false">5</string>
    <string name="_10" translatable="false">10</string>
    <string name="likes" translatable="false">likes</string>
    <string name="shares" translatable="false">shares</string>
    <string name="views" translatable="false">views</string>

    <string name="description_post_like" translatable="false">Like</string>
    <string name="description_post_share" translatable="false">Share</string>

    <string name="title" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>

    <string name="description_post_save" translatable="false">Save</string>
    <string name="menu_remove" translatable="false">Remove</string>
    <string name="post_text" translatable="false">Post Text</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="error_empty_content" translatable="false">Content can\'t be empty</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="save" translatable="false">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>