<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/common_spacing"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header Section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacing">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/posts_avatar_size"
                    android:layout_height="@dimen/posts_avatar_size"
                    android:contentDescription="@string/description_post_author_avatar"
                    android:src="@drawable/ic_netology"
                    tools:srcCompat="@sample/posts.json/data/authorAvatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/avatar"
                    android:layout_toStartOf="@id/menu"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        tools:text="@sample/posts.json/data/author" />

                    <TextView
                        android:id="@+id/published"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@sample/posts.json/data/published" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu"
                    style="@style/Widget.AppTheme.MenuButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/description_post_menu"
                    app:icon="@drawable/ic_more_vert_24" />

            </RelativeLayout>

            <!-- Video Section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacing">

                <ImageView
                    android:id="@+id/video_pic"
                    android:layout_width="match_parent"
                    android:layout_height="248dp"
                    android:contentDescription="pic"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic" />

                <ImageButton
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="image_button"
                    android:focusable="true"
                    android:src="@drawable/sharp_play_circle_outline_24" />

            </RelativeLayout>

            <!-- Content Section -->
            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.5"
                android:paddingTop="@dimen/common_spacing"
                android:paddingBottom="@dimen/common_spacing"
                tools:text="@sample/posts.json/data/content" />

        </LinearLayout>

    </ScrollView>

    <!-- Footer with buttons at the bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/common_spacing"
        android:background="?android:attr/colorBackground">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:contentDescription="@string/description_post_like"
            android:text="@string/_5"
            app:icon="@drawable/ic_like" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/description_post_share"
            android:text="@string/_5"
            app:icon="@drawable/ic_share" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/views"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:clickable="false"
            android:text="@string/_500"
            app:icon="@drawable/ic_eye" />

    </LinearLayout>

</LinearLayout>